[tool.poetry]
name = "h23s-20-backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "h23s_20_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.97.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
SQLAlchemy = "^2.0.16"
Authlib = "^1.2.0"
pymysql = "^1.0.3"
itsdangerous = "^2.1.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
